<resources>
    <string name="app_name">AMDoC1</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_recetaime">Receta Ime</string>
    <string name="menu_kalendari">Kalendari</string>
    <string name="menu_historiku">Historiku Mjekesor</string>
    <string name="menu_ilacet">Ilacet e Rimbursuara</string>
    <string name="menu_about">About AMDoc</string>
</resources>
