<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_recetaime"
            android:icon="@drawable/ic_receipt_black_24dp"
            android:title="@string/menu_recetaime" />
        <item
            android:id="@+id/nav_kalendari"
            android:icon="@drawable/ic_today_black_24dp"
            android:title="@string/menu_kalendari" />
        <item
            android:id="@+id/nav_historiku"
            android:icon="@drawable/ic_content_paste_black_24dp"
            android:title="@string/menu_historiku" />
        <item
            android:id="@+id/nav_ilace"
            android:icon="@drawable/ic_local_hospital_black_24dp"
            android:title="@string/menu_ilacet" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="Logout"/>
    </group>

    <item android:title="About">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_people_black_24dp"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
